# genozip_wrapper

./: pyproject.toml
genozip_wrapper/: cli.py  fastq.py  read_config.py
